# artemis-quant-jack-new

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  SUMMARY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AUDIT.md  STAGE2_RESULTS.md  STAGE4_RESULTS.md  STATUS.md
docs/plans/: 2026-05-30-data-foundation-universe.md  2026-05-30-momentum-signal-formation.md  2026-05-30-stage2-significance.md  2026-05-30-stage3-4-backtest.md  2026-05-30-stage5-report.md  2026-05-30-universe-remediation.md  2026-05-31-skip-variant-validation.md  2026-06-02-competition-readiness-remediation.md
docs/reference/: factor-book-guide.md
docs/report/: Artemis_Momentum_Findings.docx  Artemis_Momentum_Report.md
docs/specs/: 2026-05-30-artemis-momentum-design.md
scripts/: build_factor_returns.py  build_report.py  build_report_figures.py  build_returns.py  build_universe.py  build_writeup_docx.py  probe_artemis.py  run_backtest.py  run_stage2.py
src/amom/: __init__.py  cache.py  config.py
src/amom/backtest/: __init__.py  costs.py  engine.py  metrics.py
src/amom/factor/: momentum.py  portfolio.py
src/amom/providers/: __init__.py  artemis.py  base.py
src/amom/returns/: __init__.py  spot.py
src/amom/stats/: __init__.py  bootstrap.py  core.py  dsr.py  pbo.py  sharpe_se.py  spanning.py  subsample.py
src/amom/universe/: builder.py  coverage.py  eligibility.py  recycle.py  registry.py
tests/: conftest.py  test_backtest_costs.py  test_backtest_engine.py  test_backtest_metrics.py  test_build_universe_script.py  test_cache.py  test_factor_momentum.py  test_factor_portfolio.py  test_providers_artemis.py  test_report_source_consistency.py  test_returns_spot.py  test_run_backtest.py  test_run_stage2.py  test_stats_bootstrap.py  test_stats_core.py  test_stats_sharpe_se.py  test_stats_spanning.py  test_stats_subsample.py  test_universe_builder.py  test_universe_coverage.py  test_universe_eligibility.py  test_universe_recycle.py  test_universe_registry.py
tests/integration/: test_artemis_live.py
