[project]
name = "amom"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "requests",
    "pyarrow",
    "python-dotenv",
    "numpy",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["integration: live Artemis API tests (require ARTEMIS_API_KEY)"]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/amom"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
